# DRY

./: .gitignore  Cargo.toml  Makefile  README.md  Rete.py  apt.txt  flask.ini  metaL.ini  metaL.nimble  metaL.py  proglang.py  requirements.txt  test_metaL.py  web.ini
docs/: metaL.html  metaL.idx
src/: game.nim  main.rs  metaL.nim  web.nim
static/: .gitignore
templates/: all.html  css.css  dump.html  g6.html  go.html  html.html  index.html
