[package]
name = "metal"
version = "0.1.0"
authors = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
edition = "2018"

description = "Don't Repeat Yourself /metaL core in Rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

